# tauri-plugin-nosleep

./: Cargo.toml  LICENSE  README.md  build.rs  package.json
.changes/: config.json  initial-release.md  readme.md
examples/svelte-app/: package.json  rollup.config.js
examples/svelte-app/src/: App.svelte
examples/svelte-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/svelte-app/src-tauri/src/: main.rs
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
examples/tauri-app/src-tauri/capabilities/: main.json
examples/tauri-app/src-tauri/src/: lib.rs
ios/: Package.swift  README.md
ios/Sources/: NoSleepPlugin.swift
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: block.toml  prevent_display_sleep.toml  prevent_system_sleep.toml  unblock.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs
webview-dist/: index.d.ts  index.js
webview-src/: index.ts
