[package]
name = "tauri-plugin-nosleep"
version = "0.1.0"
authors = [ "Peter Evers <pevers90@gmail.com>" ]
description = "Tauri plugin to prevent the power save functionality in the OS"
keywords = ["tauri-plugin", "nosleep", "powersave", "caffeine"]
edition = "2021"
rust-version = "1.57"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.0.0-rc.8" }
serde = "1.0"
thiserror = "1.0"
nosleep = { path = "../nosleep/nosleep", version = "0.2.0-rc.3", features = ["serde"] }