[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = [ "You" ]
repository = ""
edition = "2021"
rust-version = "1.57"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "1.0.0-rc.8", features = ["api-all"] }
tauri-plugin-nosleep = { path = "../../../" }

[build-dependencies]
tauri-build = { version = "1.0.0-rc.7", features = [] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]
